<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="dialog_open_account">Do you want to open MyVIB?</string>
    <string-array name="arrTitle">
        <item>#</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string name="truy_van_tk">View accounts</string>
    <string name="tt_hd_t_td">Pay a bill</string>
    <string name="chuyen_tien_ca_nhan">Transfer between your accounts</string>
    <string name="tai_vib">Download VIB</string>
    <string name="thong_bao">Message</string>
    <string name="thong_bao_desc">The data is for reference only at a time in the past and maybe no longer accurate. To update the latest data please install application MyVIB</string>
    <string name="pay_vib">VIB Account</string>
    <string name="card_nh_khac">Local ATM cards</string>
    <string name="sdt">Mobile number</string>
    <string name="local_email">Email</string>
    <string name="pstn_code">PSTN code</string>
    <string name="enter_pstn_code">Enter PSTN code</string>
    <string name="adsl_code">ADSL Code</string>
    <string name="enter_adsl_code">Enter ADSL Code</string>
    <string name="reservation_code">Reservation Code</string>
    <string name="enter_reservation_code">Enter Reservation Code</string>
    <string name="reference_no">Reference No</string>
    <string name="enter_reference_no">Enter Reference No</string>
    <string name="jul">Jul</string>
    <string name="jun">Jun</string>
    <string name="service_1">Mobile BillPay</string>
    <string name="service_2">Homephone BillPay</string>
    <string name="service_3">EVN BillPay</string>
    <string name="service_4">Water BillPay</string>
    <string name="service_5">PSTN BillPay</string>
    <string name="service_6">ADSL BillPay</string>
    <string name="service_7">Airline ticket BillPlay</string>
    <string name="service_8">Insurance</string>
    <string name="service_9">Telecommunications</string>
    <string name="service_10">Credit Card/Consumer Installment Loan</string>
    <string name="ma_dich_vu_pstn">Enter code PSTN services</string>
    <string name="nhap_ma_khach_hang">Enter customer code</string>
    <string name="ma_khach_hang">Customer code</string>
    <string name="so_thue_bao">Phone number</string>
    <string name="tien_chua_thanh_toan">The total amount of unpaid</string>
    <string name="title_get_code_dialog">wrong code</string>
    <string name="get_code_dialog">Please enter 123456 to continue</string>
    <string name="tien_gui_thanh_toan">Deposit payment</string>
    <string name="transfer_between">Internal funds transfer</string>
    <string name="pay_mc">Payment processed</string>
    <string name="top_up_desc">Transfer money to the bank link</string>
    <string name="pay_anyone_desc_phone">Transfer money by phone</string>
    <string name="pay_bill_desc">Pay bill</string>
    <string name="address_home">CTM School - 131 Nguyen trai, thanh xuan, Ha noi \n60m away</string>
    <string name="inquery_fail">Inquery fail</string>
    <string name="outstanding_bill">No outstanding bills</string>
    <string name="enter_customer_id">Enter customer id</string>
    <string name="customer_id">Customer id</string>
    <string name="_for">For</string>
    <string name="other_account_title">Other account</string>
    <string name="sent_otp_ms_ss">Please enter 123456 to continue</string>
    <string name="cardid">04870406006037</string>
    <string name="sent_otp">Sent OTP</string>
    <string name="sent_otp_ms">Sent OTP successfully</string>
    <string name="card_promotion">Card promotion locator</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="cancel">Cancel</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="preparing_card">Preparing card</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="__user_name">Username</string>
    <string name="_n_m">%/year</string>
    <string name="_username">Username</string>
    <string name="bieu_lai_suat_tiet_kiem_thuong">Ordinary savings</string>
    <string name="confirm1">Confirm</string>
    <string name="description">Description</string>
    <string name="eur">EUR</string>
    <string name="from">From</string>
    <string name="home">Home</string>
    <string name="img_description">Image View</string>
    <string name="last_term">Last term</string>
    <string name="link">www.vib.com.vn</string>
    <string name="monthly">Monthly</string>
    <string name="note_interest_rates">Note: For withdrawal prior to maturity, non-term interest rate will be applied</string>
    <string name="optional">Optional</string>
    <string name="quarterly">Quarterly</string>
    <string name="reg_text11">"Your mobile number has not been
registered with VIB."</string>
    <string name="reg_text12">"You can contact our
Customer Service 24/7 at"</string>
    <string name="reg_text13">Or provide your more information for us to contact later.</string>
    <string name="term">Term</string>
    <string name="usd">USD</string>
    <string name="vnd">VND</string>
    <string name="allowance">Allowance</string>
    <string name="bill">Bill</string>
    <string name="car">Car</string>
    <string name="mum">Mum</string>
    <string name="savings">Savings</string>
    <string name="shop">Shop</string>
    <string name="rent">Rent</string>
</resources>