<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/text_3_14sp"
    android:paddingTop="@dimen/text_3_14sp">

    <com.vnapnic.myvib.customs.FontTextView
        android:id="@+id/term"
        style="@style/NORMAL_TEXT_STYLE_BLACK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_1_8dp"
        android:layout_weight="3.0"
        android:paddingLeft="@dimen/spacing_0_2dp"
        android:paddingRight="@dimen/spacing_0_2dp"
        android:text="@string/term" />

    <com.vnapnic.myvib.customs.FontTextView
        android:id="@+id/vnd"
        style="@style/NORMAL_TEXT_STYLE_BLACK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:gravity="center"
        android:text="@string/vnd" />

    <com.vnapnic.myvib.customs.FontTextView
        android:id="@+id/usd"
        style="@style/NORMAL_TEXT_STYLE_BLACK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:gravity="center"
        android:text="@string/usd" />

    <com.vnapnic.myvib.customs.FontTextView
        android:id="@+id/eur"
        style="@style/NORMAL_TEXT_STYLE_BLACK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:gravity="center"
        android:text="@string/eur" />
</LinearLayout>